fix image preload blurring effect

--- a/src/js/components/Life/LifePinView.less
+++ b/src/js/components/Life/LifePinView.less
@@ -13,6 +13,7 @@
 
   img[ta-insert-video] {
     cursor: pointer;
+    .isMobile({ width: 100% !important; });
   }
 
   .video-player img[ta-insert-video] {
